<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#cccccc"
    android:layout_marginBottom="2dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_person_image"
        android:layout_width="@dimen/picture_width"
        android:layout_height="@dimen/match_constraint"
        android:layout_marginLeft="@dimen/little_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_description"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="@dimen/match_constraint"
        android:text="@string/name"
        android:textStyle="bold"
        android:textSize="@dimen/big_text"
        android:padding="@dimen/padding_of5"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_person_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_person_image"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="@dimen/match_constraint"
        android:text="@string/_2015_3000"
        android:padding="@dimen/padding_of5"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_person_image"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="@dimen/match_constraint"
        android:text="@string/some_description"
        android:textColor="@color/black"
        android:padding="@dimen/padding_of5"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_person_image"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintBottom_toBottomOf="@id/iv_person_image"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>